# gbc_ce_site

./: .env.example  .gitignore  .pre-commit-config.yaml  __init__.py  deploy.sh  environment.yaml  pyproject.toml
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
backend/course_api/: main.py  manage.py
backend/course_api/config/: settings.py  urls.py
backend/course_api/courses/: models.py  serializers.py  views.py
backend/course_api/courses/management/commands/: import_courses.py
backend/course_api/courses/migrations/: 0001_initial.py  0002_alter_course_id_alter_schedule_id.py  0003_alter_course_table_alter_schedule_table.py  0004_alter_course_fees.py  0005_alter_schedule_day_of_week.py
backend/course_api/settings/: production.py
backend/course_scheduler/: settings.py
backend/courses/: models.py
backend/courses/management/commands/: load_course_data.py
backend/nginx/: Dockerfile  nginx.conf
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/api/: courses.ts
frontend/src/components/: CourseCard.tsx  Filters.tsx  Pagination.tsx  SearchBar.tsx  ThemeToggle.tsx
frontend/src/hooks/: useDataSource.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
frontend/src/utils/: testData.ts
python_scrape/: README.md  cerebras_extract_dates.py  clean_courses.py  cohere_extract_dates.py  constants.py  pyproject.toml  scrape.py
python_scrape/db/: database.py  load_data.py  queries.py  run_query.py
scraper/: README.md  pyproject.toml
scraper/db/: compare_data.py  database.py  load_data.py  queries.py
scraper/src/: __init__.py  cerebras_extract_dates.py  clean_courses.py  cohere_extract_dates.py  filters.py  schedule_utils.py  scrape.py  utils.py
tests/: test_db_load.py
tests/fixtures/: course_page_example.html  main_page_example.html
