[tool.poetry]
name = "gbc_ce_site"
version = "0.1.0"
description = "Course scraping utilities"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "python_scrape" }
]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
cohere = "^4.43"
instructor = "^0.5.1"
cerebras_cloud_sdk = "*"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
tqdm = "^4.66.0"
requests = "^2.31.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120 