[project]
name = "scraper"
version = "1.0"
description = "Scrape George Brown College courses and programs"
authors = [{ name = "Michal Malyska", email = "malyskamichal@gmail.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "instructor>=1.0.0",
    "cerebras-cloud-sdk>=0.1.0",
    "cohere>=4.0.0",
    "pydantic>=2.0.0",
]


[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5",
    "ruff>=0.11.2,<0.12",
    "pytest>=8.3.5,<9",
]

[tool.ruff]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
